@@ -81,7 +81,7 @@ In addition, the
 specifier will print the number of columns in the record.
 .Pp
 When the
-.Fl i
+.Fl n
 flag is given, the first row is assumed to contain column names and is not output.
 This allows symbolic, instead of numeric, column accessors to be used.
 A symbolic column accessor is the column name enclosed in curly braces.
@@ -97,26 +97,22 @@ Specifying a column name that does not appear in the first row generates an erro
 so the use of symbolic column accessors adds an extra consistency check.
 .Sh XML Mode
 With
-.Fl x
-or
-.Fl X ,
+.Fl x ,
 the entire file is converted into an XML document.
 .Pp
 The document element is
 .Ar "<csv>" .
+.Pp
 Each CSV row becomes a
 .Ar "<row>"
 element containing its individual column values as sub-elements.
 .Pp
-With
-.Fl x ,
-the sub-elements are
+The column value sub-elements are named
 .Ar "<col1>" ,
 .Ar "<col2>" ,
-etc.
-.Pp
-With
-.Fl X
+etc.;
+with
+.Fl i ,
 the sub-elements use the column names read from the first row (with illegal characters replaced by underscores).
 .Pp
 In XML mode, a character encoding must be assumed; see
@@ -125,28 +121,25 @@ In XML mode, a character encoding must be assumed; see
 The
 .Nm xml2csv
 command can convert XML documents generated by
-.Nm
-back into CSV files.
+.Nm "csvprintf -x"
+back into CSV.
 .Sh JSON Mode
 With
 .Fl j ,
 each row is converted into a JSON document.
 .Pp
-This form is described by RFC 7464 and consists of concatenated JSON documents,
-each framed by ASCII RS and LF control characters.
-This output is compatible with the
+This form is described by RFC 7464 and consists of concatenated JSON documents
+framed by ASCII RS and LF control characters, which is compatible with the
 .Xr jq 1
 utility's
 .Fl \-seq
 flag.
 .Pp
-Without
+Normally each row is written as a string array;
+with
 .Fl i ,
-each row is written as a string array.
-With
-.Fl i ,
-each row is written as an object, with a field for each column name.
-An error occurs if two CSV columns have the same name.
+each row is written as an object, using column names for fields.
+An error occurs if two columns have the same name.
 .Pp
 In JSON mode, a character encoding must be assumed; see
 .Fl e .
@@ -155,13 +148,11 @@ With
 .Fl b ,
 each row is converted into
 .Xr bash 1
-variable assignments which may be applied with the
+variable assignment(s) which may be applied with the
 .Xr eval 1
 command.
 .Pp
-Without
-.Fl i ,
-the output assigns
+Normally the output just assigns
 .Ar ROW
 as an array of values.
 The resulting output can be used like this:
@@ -177,7 +168,7 @@ done
 With
 .Fl i ,
 each column value is assigned to a separate variable whose name is the corresponding column name
-(with underscores replacing non-alphanumeric characters), and an error occurs if two CSV columns have the same name.
+(with underscores replacing non-alphanumeric characters), and an error occurs if two variables have the same name.
 .Pp
 So an input file like this:
 .Bd -literal -offset indent
@@ -188,13 +179,30 @@ So an input file like this:
 .Pp
 can be processed like this:
 .Bd -literal -offset indent
-cat input.csv | csvprintf -bi | while read LINE; do
+cat input.csv | csvprintf -bi -p ROW_ | while read LINE; do
     eval "${LINE}"
-    echo "First name: ${First_Name}"
-    echo "Last name: ${Last_Name}"
-    echo "Registered: ${Registered___}"
+    echo "First name: ${ROW_First_Name}"
+    echo "Last name: ${ROW_Last_Name}"
+    echo "Registered: ${ROW_Registered___}"
 done
 .Ed
+.Pp
+The
+.Fl i
+flag opens a potential security hole because Bash has several special variables like
+.Ar PATH ,
+.Ar TMPDIR ,
+etc., which could be overwritten by malicious input.
+To prevent this,
+.Nm
+omits known Bash variables.
+They can be explicitly white-listed using the
+.Fl c
+flag.
+.Pp
+In any case, use of the
+.Fl p
+flag is recommended in Bash Mode to help avoid namespace collisions.
 .Sh Input Encoding
 In all modes, lines must be terminated by LF bytes or CR+LF byte pairs, and the separator and quote characters must be recognizable as single byte values.
 This parsing behavior is compatible with ASCII, ISO-8859-1, UTF-8, etc., but not multi-byte encodings such as UTF-16, which must be re-encoded (e.g., to UTF-8) first.
@@ -232,15 +240,16 @@ By default (or if ``-'' is specified),
 .Nm
 reads from standard input.
 .It Fl i
-Assume the first CSV record contains column names and omit that record from the output.
+Use column names read from the first record in the output.
 .Pp
-In normal mode, enable symbolic column accessors.
-.Pp
-In XML mode, use column names for the inner-most XML elements.
+In normal mode, or when used with the
+.Fl x
+flag, this flag is equivalent to
+.Fl n .
 .Pp
 In JSON mode, output objects instead of arrays and use column names for the object fields.
 .Pp
-In Bash mode, output multiple variable assignments using column names instead of a single
+In Bash mode, output a variable for each column instead of a single
 .Ar ROW
 array variable.
 .Pp
@@ -250,9 +259,23 @@ In that case,
 reverts to using
 .Ar col1 ,
 .Ar col2 ,
-etc.
+etc., for any extra columns.
+.Pp
+This flag implies
+.Fl n .
 .It Fl j
-Convert the CSV input into a JavaScript Object Notation (JSON) text sequence document.
+Convert the input into a JavaScript Object Notation (JSON) text sequence document.
+.It Fl n
+Assume the first CSV record contains column names and omit from the output.
+.Pp
+In normal mode, enable symbolic column accessors.
+.It Fl p
+Specify a common prefix (UTF-8 encoding) to use with all column names in the output.
+.Pp
+This flag is ignored unless
+.Fl i
+is specified.
+.Pp
 .It Fl q
 Specify an alternate CSV column quote character.
 The usual backslash escape sequences are accepted.
@@ -268,14 +291,12 @@ Output usage message and exit.
 .It Fl v
 Output version information and exit.
 .It Fl x
-Convert the CSV input into an XML document.
+Convert the input into an XML document.
 .It Fl X
-Same as
-.Fl x ,
-but it also causes the values in the first row to be used as the XML tag names for the corresponding columns.
+Convert the input into an XML document using column names for value sub-elements.
 .Pp
 This flag implies
-.Fl i .
+.Fl n .
 .El
 .Sh CSV FORMAT
 .Nm
