@@ -1,6 +1,9 @@
 Version Next
 
     - Added "-c" flag for explicit column names
+    - Added "-n" flag that only reads column names
+    - Added "-p" flag for prefixing names
+    - Omit special variable names in Bash mode
     - Fixed build error on systems without 'u_char' defined
 
 Version 1.3.0 released December 9, 2021
